@@ -16,14 +16,15 @@
 package eu.qualimaster.easy.extension.internal;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 
 import eu.qualimaster.common.QMInternal;
 import eu.qualimaster.observables.IObservable;
 import net.ssehub.easy.instantiation.core.model.vilTypes.IVilType;
 import net.ssehub.easy.instantiation.core.model.vilTypes.Instantiator;
 import net.ssehub.easy.instantiation.core.model.vilTypes.Map;
-import net.ssehub.easy.instantiation.core.model.vilTypes.OperationMeta;
 import net.ssehub.easy.instantiation.core.model.vilTypes.ParameterMeta;
+import net.ssehub.easy.instantiation.core.model.vilTypes.ReturnGenerics;
 import net.ssehub.easy.instantiation.core.model.vilTypes.Set;
 
 import static eu.qualimaster.easy.extension.internal.PredictionUtils.*;
@@ -43,14 +44,9 @@ public class AlgorithmPrediction implements IVilType {
         AlgorithmPredictor impl = null;
         try {
             Class<?> cls = Class.forName("eu.qualimaster.easy.extension.internal.AlgorithmPredictorImpl");
-            impl = (AlgorithmPredictor) cls.newInstance();
-        } catch (ClassNotFoundException e) {
-            error(e);
-        } catch (InstantiationException e) {
-            error(e);
-        } catch (IllegalAccessException e) {
-            error(e);
-        } catch (ClassCastException e) {
+            impl = (AlgorithmPredictor) cls.getDeclaredConstructor().newInstance();
+        } catch (InvocationTargetException | NoSuchMethodException | ClassNotFoundException 
+            | InstantiationException | IllegalAccessException | ClassCastException e) {
             error(e);
         }
         if (null == impl) {
@@ -119,7 +115,7 @@ public class AlgorithmPrediction implements IVilType {
      * @return the predictions per algorithm/observables, if not possible individual predictions may be <b>null</b>
      *     or the entire result may be <b>null</b> if there is no prediction at all
      */
-    @OperationMeta(returnGenerics = {String.class, Map.class, IObservable.class, Double.class})
+    @ReturnGenerics({String.class, Map.class, IObservable.class, Double.class})
     public static Map<String, Map<IObservable, Double>> algorithmPrediction(String pipeline, String pipelineElement, 
         @ParameterMeta(generics = {String.class}) 
         Set<String> algorithms, 
@@ -140,7 +136,7 @@ public class AlgorithmPrediction implements IVilType {
      * @return the predictions per algorithm/observables, if not possible individual predictions may be <b>null</b>
      *     or the entire result may be <b>null</b> if there is no prediction at all
      */
-    @OperationMeta(returnGenerics = {String.class, Map.class, IObservable.class, Double.class})
+    @ReturnGenerics({String.class, Map.class, IObservable.class, Double.class})
     public static Map<String, Map<IObservable, Double>> algorithmPrediction(String pipeline, String pipelineElement, 
         @ParameterMeta(generics = {String.class}) 
         Set<String> algorithms, 
